--- a/css/main-LTR.css
+++ b/css/main-LTR.css
@@ -116,7 +116,6 @@ section {
 .init-text {
   font-weight: 500;
   font-size: 1.1rem;
-  font-style: italic;
   opacity: .85;
   line-height: 1.7;
   margin-bottom: 3rem;
@@ -2260,7 +2259,8 @@ body.rounded-btns .field-group .label {
 
 @media (max-width: 1199px) {
   .header-2 .bar-bottom, .header-1 .bar-bottom, .header-basic .bar-bottom {
-    background-color: #08bce9;
+    background-color: #08BCE9;
+    height: 115px;
   }
 }
 
@@ -2480,8 +2480,8 @@ body.rounded-btns .field-group .label {
 
 .header-2 .header-logo .logo-img, .header-1 .header-logo .logo-img, .header-basic .header-logo .logo-img {
   display: block;
-  max-width: 10rem;
-  max-height: calc(80px - 10px);
+  max-width: 20rem;
+  max-height: 7rem;
   transition: all 0.5s ease-in-out 0s;
 }
 
